Change for non MBR disk (PR#47463):  - Check each mbrp_type field in fdisk partition table in MBR to know whether    a sector is really MBR or not. Same as MI subr_disk_mbr.c  - Check whether each number in a partition table is out of bound or not.    Same as MI subr_disk_mbr.c  - Update d_packname and d_npartitions if we found any partitions.  - Currently, the exended partitions is not supported...